# CUDAfractals

./: .gitignore  README.md
src/: CMakeLists.txt  cuda_kernel.cu  cuda_kernel.cuh  main.cpp
